[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/prototype/portal.png" type="Texture" id=1]
[ext_resource path="res://sprites/prototype/pixel.png" type="Texture" id=2]
[ext_resource path="res://sprites/prototype/portal_shadow.png" type="Texture" id=3]
[ext_resource path="res://gdscript/Home.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.8362, 4.79984 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Home" type="StaticBody2D"]
position = Vector2( 8, -32 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 0, 14.8867 )
z_index = -2
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.4284 )
shape = SubResource( 1 )

[node name="Interactable" type="Node2D" parent="."]

[node name="EnemyHitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitArea"]
position = Vector2( 0, 10.387 )
shape = SubResource( 2 )

[node name="HealthBarBackground" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
position = Vector2( 0, -16 )
scale = Vector2( 1, 0.2 )
z_index = -1
texture = ExtResource( 2 )

[node name="HealthBar" type="Sprite" parent="HealthBarBackground"]
self_modulate = Color( 0.164706, 0.290196, 0.862745, 1 )
z_index = 1
texture = ExtResource( 2 )
